added vim mnemonic

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
         <br>
 
         <div class="terminal">
+            <h2>Vim remeber</h2>
+            <code>
+                <span class="command">then d elete everything un t il the next space: dtspace.</span>
+                <span class="command">dtspace or dt" osv.</span>
+            </code>
+        </div>
+
+        <div class="terminal">
             <h2>Reset changes to origin</h2>
             <code>
                 <span class="command">git fetch origin</span>
