--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
             <code>
                 <span class="command">then d elete everything un t il the next space: dtspace.</span>
                 <span class="command">dtspace or dt" osv.</span>
+                <span class="command">move line up or down</span>
+                <span class="command">ddp - down | ddkkp - up</span>
             </code>
         </div>
 
