Added 'List Full Commit Messages for a Specific Git Branch'

--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
         </div>
 
         <div class="terminal">
+            <h2>List Full Commit Messages for a Specific Git Branch</h2>
+            <code>
+                <span class="command">git log "develop..feature/#388_ImplementBackFlushing" --pretty=format:"%B"</span>
+            </code>
+        </div>
+        <div class="terminal">
             <h2>Reset changes to origin</h2>
             <code>
                 <span class="command">git fetch origin</span>
