--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
                 <span class="command">dtspace or dt" osv.</span>
                 <span class="command">move line up or down</span>
                 <span class="command">ddp - down | ddkkp - up</span>
+                <span class="command">------------------------------</span>
+                <span class="command">Vim movments</span>
+                <span class="command">_ -> beggining</span>
+                <span class="command">$ -> end</span>
+                <span class="command">- -> beggining line over</span>
+                <span class="command">w -> word</span>
+                <span class="command">f(Char) -> to next char</span>
+                <span class="command">t(Char-> same as f but char before</span>                
+                <span class="command">, and ; -> repeat f and t</span>
+                <span class="command">o and O -> New Line Cap O == before</span>
             </code>
         </div>
 
