--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 <span class="command">t(Char-> same as f but char before</span>                
                 <span class="command">, and ; -> repeat f and t</span>
                 <span class="command">o and O -> New Line Cap O == before</span>
+                <span class="command">Sex and Vex -> splitscreen</span>
             </code>
         </div>
 
