--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 <span class="command">, and ; -> repeat f and t</span>
                 <span class="command">o and O -> New Line Cap O == before</span>
                 <span class="command">Sex and Vex -> splitscreen</span>
+                <span class="commnad">ctlr-w-w -> move between spilts
             </code>
         </div>
 
