--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                 <span class="command">ddp - down | ddkkp - up</span>
                 <span class="command">------------------------------</span>
                 <span class="command">Vim movments</span>
-                <span class="command">_ -> beggining</span>
+                <span class="command">_ -> begining</span>
                 <span class="command">$ -> end</span>
-                <span class="command">- -> beggining line over</span>
+                <span class="command">- -> begining line over</span>
                 <span class="command">w -> word</span>
                 <span class="command">f(Char) -> to next char</span>
                 <span class="command">t(Char-> same as f but char before</span>                
