--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <h2>Vim remeber</h2>
             <code>
                 <span class="command">shift - v -j-j-j-y - yank in to buffer</span>
+		<span class="command">------------------------------</span>
                 <span class="command">then d elete everything un t il the next space: dtspace.</span>
                 <span class="command">dtspace or dt" osv.</span>
                 <span class="command">move line up or down</span>
