--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <div class="terminal">
             <h2>Vim remeber</h2>
             <code>
+		<span class="command">commands: set relativenumber,  set number  
                 <span class="command">shift - v -j-j-j-y - yank in to buffer</span>
 		<span class="command">------------------------------</span>
                 <span class="command">then d elete everything un t il the next space: dtspace.</span>
