--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             <h2>Vim remeber</h2>
             <code>
 		<span class="command">commands: set relativenumber,  set number  
-                <span class="command">shift - v -j-j-j-y - yank in to buffer</span>
+                <span class="command">shift vjjjy - yank in to buffer</span>
+                <span class="command">h rtp - Config paths - runtimepaths </span>
 		<span class="command">------------------------------</span>
                 <span class="command">then d elete everything un t il the next space: dtspace.</span>
                 <span class="command">dtspace or dt" osv.</span>
