--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="terminal">
             <h2>Vim remeber</h2>
             <code>
-		<span class="command">commands: set relativenumber,  set number  
+		<span class="command">commands: set relativenumber,  set number</span> 
                 <span class="command">shift vjjjy - yank in to buffer</span>
                 <span class="command">h rtp - Config paths - runtimepaths </span>
 		<span class="command">------------------------------</span>
@@ -126,7 +126,8 @@
                 <span class="command">, and ; -> repeat f and t</span>
                 <span class="command">o and O -> New Line Cap O == before</span>
                 <span class="command">Sex and Vex -> splitscreen</span>
-                <span class="commnad">ctlr-w-w -> move between spilts
+		<span class="commnad">ctlr-w-w -> move between spilts</span>
+		<span class="command">Ex Explore - netrv fileexplorer</span>
             </code>
         </div>
 
