--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <span class="command">Sex and Vex -> splitscreen</span>
 		<span class="commnad">ctlr-w-w -> move between spilts</span>
 		<span class="command">Ex Explore - netrv fileexplorer</span>
+		<span class="command">= , =ap - Auto indent<span>
             </code>
         </div>
 
