--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
             </code>
         </div>
 
-      <script src="terminalScript.js"></script>
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+        <script>hljs.initHighlightingOnLoad();</script>
+        <script src="terminalScript.js"></script>
     </body>
 </html>
