--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="codeblock">
     <h2>Action map</h2>
-    <pre><code>
+    <pre><code class="language-csharp">
     var actions = new Dictionary&lt;string, Action&gt;{
         ["action1"] = () => action1(),
         ["action2"] = () => Console.WriteLine("action2"),
