--- a/index.html
+++ b/index.html
@@ -161,6 +161,17 @@
             <code>
                 <span class="command">git fetch origin</span>
                 <span class="command">git reset --hard origin/master</span>
+            <pre></code>
+            <h2>Reset changes local gitrepo</h2> 
+            git reset - unstage all files
+            git checkout . revert all changes
+            git checkout [some_dir|file.txt] revert only that file
+            
+            -- safe way --
+            git stash  --  verify you are in the state you want
+            git stash drop -- if ok just drop the stash
+            <code></pre>
+                
             </code>
         </div>
         <div class="terminal">
