--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <br>
 
         <div class="codeblock">
-            <h2>DI in cosole app</h2>
+            <h2>DI in console app</h2>
             <pre><code class="language-csharp"></code>
 using Microsoft.Extensions.DependencyInjection;
 using Microsoft.Extensions.Hosting;
