--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="codeblock">
             <h2>DI in console app</h2>
-            <pre><code class="language-csharp"></code>
+            <pre><code class="language-csharp">
 using Microsoft.Extensions.DependencyInjection;
 using Microsoft.Extensions.Hosting;
 
