--- a/index.html
+++ b/index.html
@@ -282,6 +282,16 @@
             </code>
         </div>
         <div class="terminal">
+            <h2>Update and clean when updating .gitignore</h2>
+            <code>                
+                <span class="command">steps:</span>
+                 step1: add files or folders to gitignore
+                 step2: remove the files from the git cache - <span class="command">git rm -r --cache "FolderName"</span>
+                 step3: comit the curren change - <span class="command">git commit -m "removed FolderName folder from git chache and updated the .gitignore file"</span>
+                 step4: push the chang - <span class="command">git push</span>                        
+            </code>
+        </div>
+        <div class="terminal">
             <h2>Cleanup branches git</h2>
             <code>                
                 <span class="command">cmd:</span>
