--- a/index.html
+++ b/index.html
@@ -286,9 +286,12 @@
             <code>                
                 <span class="command">steps:</span>
                  step1: add files or folders to gitignore
-                 step2: remove the files from the git cache - <span class="command">git rm -r --cache "FolderName"</span>
-                 step3: comit the curren change - <span class="command">git commit -m "removed FolderName folder from git chache and updated the .gitignore file"</span>
-                 step4: push the chang - <span class="command">git push</span>                        
+                 step2: remove the files from the git cache 
+                 <span class="command">     git rm -r --cache "FolderName"</span>
+                 step3: comit the curren change
+                 <span class="command">     git commit -m "removed FolderName folder from git chache and updated the .gitignore file"</span>
+                 step4: push the chang
+                 <span class="command">     git push</span>                        
             </code>
         </div>
         <div class="terminal">
