--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <span class="command">- -> begining line over</span>
                 <span class="command">w -> word</span>
                 <span class="command">f(Char) -> to next char</span>
-                <span class="command">t(Char-> same as f but char before</span>                
+                <span class="command">t(Cha)-> same as f but char before</span>                
                 <span class="command">, and ; -> repeat f and t</span>
                 <span class="command">o and O -> New Line Cap O == before</span>
                 <span class="command">Sex and Vex -> splitscreen</span>
@@ -314,6 +314,18 @@
                 Deleted branch feature/MoveTheInferenceToStaticOrEventHandling (was 034de96).
                 Deleted branch feature/SystemDesignFix (was 90ef8ed).
                 Deleted branch feature/memory (was bfd7e08).
+            </code>
+        </div>
+        <div class="terminal">
+            <h2>Cleanup branches git</h2>
+            <code>                
+                <span class="command">icmp</span>
+                <span class="command">allow</span>
+                Rule
+                New-NetFirewallRule -DisplayName "ICMP Trippy Allow" -Name ICMP_TRIPPY_ALLOW -Protocol ICMPv4 -Action Allow
+                --
+                Enable-NetFirewallRule ICMP_TRIPPY_ALLOW
+                Disable-NetFirewallRule ICMP_TRIPPY_ALLOW
             </code>
         </div>
 
