added yml version bump

--- a/index.html
+++ b/index.html
@@ -328,6 +328,18 @@
                 Disable-NetFirewallRule ICMP_TRIPPY_ALLOW
             </code>
         </div>
+        <div class="terminal">
+            <h2>Versioning pipeline nugets</h2>
+            <code>                
+                <span class="command">icmp</span>
+                <span class="command">allow</span>
+                variables:
+                  major: '1'
+                  minor: '0'
+                  revision: $[counter(variables['minor'], 1)] #this will get reset when minor gets bumped. The number after Counter is the seed number (in my case, I started at 1).
+                  app_version: '$(major).$(minor).$(revision)'
+            </code>
+        </div>
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
