nerdfont for visual studio terminal fix

--- a/index.html
+++ b/index.html
@@ -340,6 +340,13 @@
                   app_version: '$(major).$(minor).$(revision)'
             </code>
         </div>
+        <div class="terminal">
+            <h2>Versioning pipeline nugets</h2>
+            <code>                
+                <span class="command">visual studio comapatible nerdfont</span>
+                <span class="command">https://eng.m.fontke.com/font/64992431/download</span>                
+            </code>
+        </div>        
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
