--- a/index.html
+++ b/index.html
@@ -346,7 +346,15 @@
                 <span class="command">visual studio comapatible nerdfont</span>
                 <span class="command">https://eng.m.fontke.com/font/64992431/download</span>                
             </code>
-        </div>        
+        </div>
+	 <div class="terminal">
+            <h2>msbuild in to Path</h2>
+            <code>                
+                <span class="command">[System.Environment]::SetEnvironmentVariable("Path", [System.Environment]::GetEnvironmentVariable("Path", [System.EnvironmentVariableTarget]::Machine) + ";C:\Program Files\Microsoft Visual Studio\2022\Professional\MSBuild\Current\Bin", [System.EnvironmentVariableTarget]::Machine)
+</span>
+                <span class="command">$env:PATH -split ';'</span>                
+            </code>
+        </div>  
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
