--- a/index.html
+++ b/index.html
@@ -355,6 +355,171 @@
             </code>
         </div>  
 
+	<div class="terminal">
+		<code>
+			<span class="command"> 
+				Build.ArtifactStagingDirectory - The local path on the agent where any artifacts are copied to before being pushed to their destination. For example: c:\agent_work\1\a
+				Build.BinariesDirectory - The local path on the agent you can use as an output folder for compiled binaries. For example: c:\agent_work\1\b.
+				Build.Repository.LocalPath - The local path on the agent where your source code files are downloaded. For example: c:\agent_work\1\s. This variable is synonymous with Build.SourcesDirectory.				
+			</span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+		<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+	<div class="terminal">
+		<code>
+			<span class="command"> </span>
+		</code>
+	</div>
+
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
         <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
         <script>hljs.initHighlightingOnLoad();</script>
