--- a/index.html
+++ b/index.html
@@ -515,10 +515,11 @@
 		</code>
 	</div>
 	<div class="terminal">
+       
 		<code>
-			<span class="command"> </span>
-            <iframe src="https://web.archive.org/web/20130129072414/http://www.systemio.net/" title="description" height="500" width="900"></iframe>
+			<span class="command"> blast from the past </span>           
 		</code>
+        <iframe src="https://web.archive.org/web/20130129072414/http://www.systemio.net/" title="description" height="1400" width="900"></iframe>
 	</div>
    
     
