--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@
 			<span class="command"> blast from the past </span>           
 		</code>
         <iframe src="https://web.archive.org/web/20130129072414/http://www.systemio.net/" title="description" height="1400" width="900"></iframe>
+        <iframe src="https://web.archive.org/web/20101231034216/http://systemio.net/snippets.php" title="description" height="1400" width="900"></iframe>
 	</div>
    
     
