--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 		</code>
 	</div>
 	<div class="terminal">
-       
+        <img src="2010_blast_from_the_past.gif" alt="">
 		<code>
 			<span class="command"> blast from the past </span>           
 		</code>
