--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
                 <span class="command">ctlr-w-w -> move between spilts</span>
                 <span class="command">Ex Explore - netrv fileexplorer</span>
                 <span class="command">= , =ap - Auto indent<span>
+			v i w  -> word
+			v i W  -> allToNextWhiteSpace
+			v i P  -> paragraph
+			v i {  -> []{}"' all between 			
             </code>
         </div>
 
@@ -358,15 +362,17 @@
 	<div class="terminal">
 		<code>
 			<span class="command"> 
-				Build.ArtifactStagingDirectory - The local path on the agent where any artifacts are copied to before being pushed to their destination. For example: c:\agent_work\1\a
-				Build.BinariesDirectory - The local path on the agent you can use as an output folder for compiled binaries. For example: c:\agent_work\1\b.
-				Build.Repository.LocalPath - The local path on the agent where your source code files are downloaded. For example: c:\agent_work\1\s. This variable is synonymous with Build.SourcesDirectory.				
-			</span>
+				</span>
+			Build.ArtifactStagingDirectory - The local path on the agent where any artifacts are copied to before being pushed to their destination. For example: c:\agent_work\1\a
+			Build.BinariesDirectory - The local path on the agent you can use as an output folder for compiled binaries. For example: c:\agent_work\1\b.
+			Build.Repository.LocalPath - The local path on the agent where your source code files are downloaded. For example: c:\agent_work\1\s. This variable is synonymous with Build.SourcesDirectory.				
+			
 		</code>
 	</div>
 	<div class="terminal">
 		<code>
-			<span class="command"> </span>
+			<span class="command"> selections </span>
+
 		</code>
 	</div>
 	<div class="terminal">
