--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@ Build.Repository.LocalPath - The local path on the agent where your source code 
 			<span class="command"> </span>
 		</code>
 	</div>
-	<div class="codeblock">      
+	<div class="codeblock">
+		<pre><code class="language-csharp">
 package main
 
 import "core:fmt"
@@ -540,6 +541,7 @@ main :: proc() {
 }
         
 	</div>
+	     </code></pre>
 
     <div class="codeblock">
         <h2>DI in console app</h2>
