--- a/index.html
+++ b/index.html
@@ -541,7 +541,8 @@ main :: proc() {
 }
         
 	</div>
-	     </code></pre>
+    </code>
+</pre>
 
     <div class="codeblock">
         <h2>DI in console app</h2>
