--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ Build.Repository.LocalPath - The local path on the agent where your source code 
 		</code>
 	</div>
 	<div class="codeblock">
-		<pre><code class="language-csharp">
+		<pre><code class="language-odin">
 package main
 
 import "core:fmt"
