--- a/index.html
+++ b/index.html
@@ -434,12 +434,16 @@ Build.Repository.LocalPath - The local path on the agent where your source code 
 			<span class="command"> </span>
 		</code>
 	</div>
-	<div class="terminal">
+	<div class="codeblock">
+		AOS = "Array of structures"
+		SOA = "Struct of arrays"
+			
 		<code>
 			<span class="command"> </span>
 		</code>
 	</div>
 	<div class="codeblock">
+	
 		<pre><code class="language-odin">
 package main
 
