--- a/index.html
+++ b/index.html
@@ -290,8 +290,12 @@ Build.Repository.LocalPath - The local path on the agent where your source code 
 	</div>
 	<div class="terminal">
 		<code>
-			<span class="command"> selections </span>
-
+		    <span class="command"> selections </span>
+.\nano.exe                                   
+pwd
+Path
+----
+C:\Program Files\Git\usr\bin
 		</code>
 	</div>
 	<div class="terminal">
