--- a/index.html
+++ b/index.html
@@ -438,6 +438,16 @@ C:\Program Files\Git\usr\bin
 			<span class="command"> </span>
 		</code>
 	</div>
+
+    <div class="codeblock">
+        in Odin Lang just do Ansi Escape Codes for console collours
+
+        https://stackoverflow.com/questions/4842424/list-of-ansi-color-escape-sequences
+
+        <code>
+            fmt.println("\033[31mRED TEXT\033[0m")
+        </code>
+    </div>
 	<div class="codeblock">
 		AOS = "Array of structures"
 		SOA = "Struct of arrays"
