--- a/index.html
+++ b/index.html
@@ -640,10 +640,15 @@ public void action1()
             <span class="command">ctlr-w-w -> move between spilts</span>
             <span class="command">Ex Explore - netrv fileexplorer</span>
             <span class="command">= , =ap - Auto indent<span>
+
+                
         v i w  -> word
         v i W  -> allToNextWhiteSpace
         v i P  -> paragraph
         v i {  -> []{}"' all between 			
+
+
+        vim -d file file  -  Diff
         </code></pre>
 
         <img src="2010_blast_from_the_past.gif" alt="">
