--- a/index.html
+++ b/index.html
@@ -649,6 +649,10 @@ public void action1()
 
 
         vim -d file file  -  Diff
+
+	flipp buffer terminal
+	Write-Output "`e[?1049h";
+	Write-Output "`e[?1049l";
         </code></pre>
 
         <img src="2010_blast_from_the_past.gif" alt="">
