--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
         <input id="tbx1" name="key" type="text" value="">
     </label>
     
-    <button hx-get="https://lw4mxk5s-7077.euw.devtunnels.ms//image-with-qr" hx-target="#content-area" hx-swap="innerHTML" hx-include="#tbx1">
+    <button hx-get="https://lw4mxk5s-7077.euw.devtunnels.ms/image-with-qr" hx-target="#content-area" hx-swap="innerHTML" hx-include="#tbx1">
         Get QR
     </button>
 
