--- a/health_monitor.html
+++ b/health_monitor.html
@@ -173,7 +173,7 @@
         // Configuration
         const CONFIG = {
             // Replace this with your Gist URL
-            gistUrl: 'https://gist.githubusercontent.com/yourusername/yourgistid/raw/targets.json',
+            gistUrl: 'https://gist.githubusercontent.com/glennwiz/728c8cb4648acf840250223fba3d284b/raw/7ad1df06474c799d1fb6e591d01e7081e79cb84f/gistfile1.txt',
             refreshInterval: 30000 // 30 seconds
         };
 
