--- a/health_monitor.html
+++ b/health_monitor.html
@@ -173,7 +173,7 @@
         // Configuration
         const CONFIG = {
             // Replace this with your Gist URL
-            gistUrl: 'https://gist.githubusercontent.com/glennwiz/728c8cb4648acf840250223fba3d284b/raw/7ad1df06474c799d1fb6e591d01e7081e79cb84f/gistfile1.txt',
+            gistUrl: 'https://gist.githubusercontent.com/glennwiz/5fde7cf2d0e27687b2ae0ff2c17f1518/raw/e2ee302b3f861e49d9cc3e665ac9a89795c2ca33/healt_targets.json',
             refreshInterval: 30000 // 30 seconds
         };
 
