--- a/health_monitor.html
+++ b/health_monitor.html
@@ -173,7 +173,7 @@
         // Configuration
         const CONFIG = {
             // Replace this with your Gist URL
-            gistUrl: 'https://gist.githubusercontent.com/glennwiz/5fde7cf2d0e27687b2ae0ff2c17f1518/raw/e2ee302b3f861e49d9cc3e665ac9a89795c2ca33/healt_targets.json',
+            gistUrl: 'https://raw.githubusercontent.com/glennwiz/glennwiz.github.io/refs/heads/main/health_targets.json',
             refreshInterval: 30000 // 30 seconds
         };
 
