--- a/health_monitor.html
+++ b/health_monitor.html
@@ -173,7 +173,7 @@
         // Configuration
         const CONFIG = {
             // Replace this with your Gist URL
-            gistUrl: 'https://raw.githubusercontent.com/glennwiz/glennwiz.github.io/refs/heads/main/health_targets.json',
+            gistUrl: 'https://glennwiz.github.io/health_targets.json',
             refreshInterval: 30000 // 30 seconds
         };
 
