--- a/health_monitor.html
+++ b/health_monitor.html
@@ -197,7 +197,7 @@
         // Configuration
         const CONFIG = {
             // Replace this with your Gist URL
-            gistUrl: 'https://glennwiz.github.io/health_targets.json',
+            gistUrl: 'https://ams3.digitaloceanspaces.com/rsposres/Targets/health_targets.json',
             refreshInterval: 10000, // 10 seconds
             showRefreshAnimation: true // Enable refresh animation
         };
